# stockrhythm

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  Makefile  README.md  docker-compose.yml  manual_test_upstox.py  manual_test_v2.py  paper_trades.db  pyproject.toml
.github/: copilot-instructions.md
apps/backend/: config.yaml  pyproject.toml
apps/backend/data/: instruments.csv
apps/backend/src/: __main__.py  auth_store.py  data_orchestrator.py  instrument_master.py  main.py  paper_engine.py  risk_engine.py  universe_manager.py  upstox_auth.py
apps/backend/src/providers/: base.py  csv_utils.py  kotak.py  mock.py  upstox.py
apps/dashboard/: package.json
apps/dashboard/src/app/: layout.tsx  page.tsx
apps/dashboard/src/components/: LogViewer.tsx  PnLChart.tsx  StrategyTable.tsx
apps/dashboard/src/hooks/: useStreamingData.ts
apps/mock_exchange/: pyproject.toml
apps/mock_exchange/src/: engine.py  server.py
docs/: LINTING.md
my_test_strategy/: requirements.txt
my_test_strategy/strategies/: strategy.py
scripts/: build_full_master.py  fetch_instruments.py
strategies/: kotak_printer.py  trend_follower.py  vol_momentum_bot.py
test_strategy/: .gitignore  README.md
test_strategy/config/: filter.json
tests/: manual_token_resolve_test.py  manual_universe_test.py
tests/e2e/: test_full_flow.py
tests/integration/: test_backend_api.py  test_cli_backtest.py  test_kotak_live.py  test_paper_trading.py  test_universe_filter.py
tests/unit/: test_auth_store.py  test_cli_backtest_prompt.py  test_cli_doctor.py  test_cli_lint.py  test_filter_builder.py  test_instrument_master.py  test_matching_engine.py  test_risk_engine.py  test_sdk_backtest.py  test_sdk_client.py  test_sdk_serialization.py  test_sdk_strategy.py  test_universe_manager.py  test_upstox_provider.py
