[project]
name = "backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis",
    "stockrhythm-sdk",
    "httpx",
    "pyotp",
    "python-dotenv"
]

[tool.uv.sources]
stockrhythm-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
